# polyorbite_rover

./: CMakeLists.txt  README.md  commandes.txt  package.xml
config/: base_local_planner_params.yaml  diffdrive.yaml  robot_localization_ekf.yaml  wheels.yaml
ina260/: CMakeLists.txt  package.xml
ina260/msg/: ina260info.msg
ina260/src/: ina260.py  ina260_node.py
interest_points/: CMakeLists.txt  package.xml
interest_points/include/interest_points/: collector.h  persistor.h  server.h
interest_points/src/: collector.cpp  collector_node.cpp  persistor.cpp
interest_points/src/collector/: persistor.cpp
interest_points/src/server/: server.cpp  server_node.cpp
interest_points/srv/: InterestPointsQuery.srv
launch/: control.launch  display.launch  empty_world.launch  gazebo.launch  gps.launch  move_base.launch  robot_localization_ekf.launch
motor_controller/: CMakeLists.txt  package.xml
motor_controller/src/: motor_controller.py
rover_control/: CMakeLists.txt  package.xml
rover_control/config/: base_local_planner_params.yaml  control.yaml  control_6204.yaml  costmap_common_params.yaml  diffdrive.yaml  global_costmap_params.yaml  gps_localization_config.yaml  local_costmap_params.yaml
rover_control/encoder_java_ROS/EncoderExampleCode+am-3132/EncoderExample/src/main/java/frc/robot/: Main.java  Robot.java
rover_control/include/: new_hardware_interface.h
rover_control/include/rover_base/: rover_hardware.h
rover_control/launch/: .control_physical.launch.swp  base.launch  cameras.launch  cameras2.launch  control.launch  control_6204.launch  control_alternative.launch  control_physical.launch  control_real.launch  description.launch  display.launch  ekf_localization.launch  gazebo.launch  move_base.launch  move_base_physical.launch  robot_localization_ekf.launch  robot_localization_ekf_physical.launch  start_control.launch  start_gps_nav.launch  start_map_server.launch  start_navsat.launch  zed_camera.launch.xml
rover_control/map/: mymap_empty.yaml
rover_control/msg/: Code.msg
rover_control/src/: .rover_hardware.cpp.swp  codes_node.cpp  hardware_interface_node.cpp  new_hardware_interface.cpp  rover_base.cpp  rover_hardware.cpp  shovel.cpp
rover_control/src/opencv-algorithms/: aruco_code_reading.cpp  aruco_code_reading.hpp  qr_code_reading.cpp  qr_code_reading.hpp
rover_control/urdf/: gps.urdf.xacro  rover1.urdf  rover1.urdf.xacro  suspensions_wheels.urdf.xacro
rover_control/worlds/: multiple_heights_terrain.world
rover_control/worlds/terrains/blend/: multiple_heights.blend
rover_hardware_proxy/: CMakeLists.txt  package.xml
rover_hardware_proxy/scripts/: rover_drill.py  rover_drive_train_proxy.py  rover_shovel_proxy.py  rover_speed_encoder.py
rover_interest_points/: CMakeLists.txt  package.xml
rover_interest_points/include/rover_interest_points/: interest_point_collector.h  interest_point_handler.hpp  photograph_interest_point_handler.hpp
rover_interest_points/msg/: InterestPoint.msg
rover_interest_points/src/: interest_point_service.cpp
rviz/: urdf.rviz
src/: image_suscriber.cpp  odom.cpp
src/collisions_detector/: collisions_detector.cpp  collisions_detector.h
urdf/: camera.urdf.xacro  gps.urdf.xacro  rover1.urdf.xacro  suspensions_wheels.urdf.xacro
utilities/: Dockerfile.prod
worlds/: maze.world  maze2.world  soccerField.world
worlds/terrains/collada/multiple_heights/: multiple_heights.dae
