<?xml version="1.0"?>
<package format="3">
  <name>polyorbite_rover</name>
  <version>0.0.5</version>
  <description>polyorbite_rover</description>
  <author email="x.ouimet@gmail.com">Xavier Ouimet</author>
  <maintainer email="x.ouimet@gmail.com">Xavier Ouimet</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>cv_bridge</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>

  <build_depend>image_transport</build_depend>
  <build_depend>message_generation</build_depend>

  <build_export_depend>message_runtime</build_export_depend>

  <exec_depend>diff_drive_controller</exec_depend>
  <exec_depend>joint_state_controller</exec_depend>
  <exec_depend>position_controllers</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>message_runtime</exec_depend>

  <export>
		<controller_interface plugin="${prefix}/controller_plugins.xml" />

  </export>

</package>

